added trained model for sample 2 and 4 and entire dataset

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 chest_xray
 split_chest_xray
 cnnn
+cnn1
+train_merged
 xception_train2.h5
 xception_train3.h5
 xception_train4.h5
 xception_train1.h5
+xception_train2_5_epocs.h5
+xception_train_entire_dataset.h5
